--- a/biome.json
+++ b/biome.json
@@ -4,12 +4,11 @@
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineWidth": 80,
-    "lineEnding": "lf"
+    "lineWidth": 80
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "single",
+      "quoteStyle": "double",
       "trailingCommas": "es5",
       "semicolons": "always"
     }
@@ -17,16 +16,7 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
-      "correctness": {
-        "recommended": true
-      },
-      "suspicious": {
-        "recommended": true
-      },
-      "style": {
-        "recommended": true
-      }
+      "recommended": true
     }
   },
   "files": {
